compiler/tools/fpp-check/test/tlm_channel/not_displayable.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/tlm_channel/not_displayable.fpp:13.16
  telemetry T: A
               ^
error: telemetry channels need to be displayable type
